--- a/src/pages/Projetos.css
+++ b/src/pages/Projetos.css
@@ -1,13 +1,31 @@
+.projetos-page {
+    padding-top: 150px;
+}
+
+.projetos-page section {
+    display: inline-block;
+    margin-top: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    padding: 5%;
+    text-align: center;
+}
+
+.projetos-page section h2 {
+    width: 100%;
+    font-size: 50px;
+    margin: 0;
+    font-family: "Gravitas One", serif;
+    color: rgb(7, 78, 79);
+}
+
 /* Container principal do grid */
 .container-grid {
     display: flex;
-    /* usa flex em vez de grid, mais simples */
     flex-wrap: wrap;
-    /* quebra linha se faltar espaço */
     justify-content: center;
-    /* centraliza os cards */
     gap: 30px;
-    /* espaço entre os cards */
     padding: 50px;
 }
 
@@ -25,7 +43,6 @@
 
 .card:hover {
     transform: scale(1.03);
-    /* aumenta levemente ao passar o mouse */
     background-color: rgb(7, 78, 79);
     color: antiquewhite;
 }
@@ -34,9 +51,7 @@
 .card img {
     width: 100%;
     height: 180px;
-    /* define altura fixa */
     object-fit: cover;
-    /* corta sem distorcer */
     border-radius: 10px;
     margin-bottom: 10px;
 }
@@ -54,6 +69,6 @@
 
     .card {
         width: 70%;
-        /* ocupa quase toda a tela */
     }
 }
+
